--- a/Fit_Track/View/ForgotPasswordWindow.xaml
+++ b/Fit_Track/View/ForgotPasswordWindow.xaml
@@ -22,8 +22,6 @@
         <Label x:Name="lblUsername" Content="Username: " Foreground="LightGray" Height="20" Margin="5"
                FontSize="8" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
 
-        
-        
         <StackPanel Grid.Row="1" VerticalAlignment="Top">
             <Label x:Name="lblSecurityQuestion" Content="{Binding SecurityQuestion, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" 
                    Foreground="LightGray" Height="20" Margin="5" FontSize="8" FontWeight="Bold" HorizontalAlignment="Right" 
@@ -33,15 +31,16 @@
         <StackPanel Grid.Column="1" VerticalAlignment="Bottom" Orientation="Horizontal"> 
             <TextBox x:Name="txtBoxUsername" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Width="120" Height="20"
                      HorizontalAlignment="Left" Margin="5" VerticalAlignment="Bottom"/>
-            <Button x:Name="btnEnter" Content="Enter" Width="120" Height="20" Command="{Binding EnterCommand, UpdateSourceTrigger=PropertyChanged}"
-                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"/>
+            <Button x:Name="btnEnter" Content="Enter" Width="120" Height="20" Command="{Binding EnterCommand, UpdateSourceTrigger=PropertyChanged}"/>
+            <Button x:Name="btnCancel" Content="Cancel" Width="120" Height="20" Margin="5"
+        Command="{Binding CancelCommand, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
 
         <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Orientation="Horizontal">
             <TextBox x:Name="txtBoxSecurityAnswer" Margin="5" Text="{Binding SecurityAnswer, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
                      Visibility="{Binding SecurityVisibility}" Width="120" Height="20"/>
             <Button x:Name="btnConfirm" Content="Confirm" Width="120" Height="20" Command="{Binding ConfirmCommand, UpdateSourceTrigger=PropertyChanged}"
-                    Visibility="{Binding SecurityVisibility}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"/>
+                    Visibility="{Binding SecurityVisibility}"/>
         </StackPanel>
 
         <StackPanel Grid.Row="2" HorizontalAlignment="Right">
@@ -57,8 +56,7 @@
             <TextBox x:Name="txtBoxConfirmPassword" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"
                      Text="{Binding ConfirmPassword, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
             <Button x:Name="btnSave" Content="Save" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"
-                    Command="{Binding SaveCommand, UpdateSourceTrigger=PropertyChanged}"
-                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"/>
+                    Command="{Binding SaveCommand, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
     </Grid>
 </Window>
