--- a/Fit_Track/View/UserDetailsWindow.xaml
+++ b/Fit_Track/View/UserDetailsWindow.xaml
@@ -20,16 +20,14 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Row="1">
-            <Label Content="Username:" HorizontalAlignment="Right" Height="30" Width="80" Margin="5" FontSize="15" Foreground="LightGray"/>
-            <Label Content="Password:" HorizontalAlignment="Right" Height="30" Width="80" 
+            <Label Content="Username:" HorizontalAlignment="Right" Height="30" Margin="5" FontSize="15" Foreground="LightGray"/>
+            <Label Content="Password:" HorizontalAlignment="Right" Height="30"
                    Margin="5" FontSize="15" Foreground="LightGray" Visibility="{Binding PasswordVisibility}"/>
-            <Label Content="New password:" HorizontalAlignment="Right" Height="30" Width="115" 
-                   Margin="5" FontSize="15" Foreground="LightGray" Visibility="{Binding NewPasswordVisibility}"/>
-            <Label Content="Confirm password:" HorizontalAlignment="Right" Height="30" Width="140" 
-                   Margin="5" FontSize="15" Foreground="LightGray" Visibility="{Binding ConfirmPasswordVisibility}"/>
-            <Label Content="Country:" HorizontalAlignment="Right" Height="30" Width="75" Margin="5" FontSize="15" Foreground="LightGray"/>
-            <Label Content="Security question:" HorizontalAlignment="Right" Height="30" Width="130" Margin="5" FontSize="15" Foreground="LightGray"/>
-            <Label Content="Security answer:" HorizontalAlignment="Right" Height="30" Width="120" Margin="5" FontSize="15" Foreground="LightGray"/>
+            <Label Content="New password:" HorizontalAlignment="Right" Height="30" Margin="5" FontSize="15" Foreground="LightGray" Visibility="{Binding NewPasswordVisibility}"/>
+            <Label Content="Confirm password:" HorizontalAlignment="Right" Height="30" Margin="5" FontSize="15" Foreground="LightGray" Visibility="{Binding ConfirmPasswordVisibility}"/>
+            <Label Content="Country:" HorizontalAlignment="Right" Height="30" Margin="5" FontSize="15" Foreground="LightGray"/>
+            <Label Content="Security question:" HorizontalAlignment="Right" Height="30" Margin="5" FontSize="15" Foreground="LightGray"/>
+            <Label Content="Security answer:" HorizontalAlignment="Right" Height="30" Margin="5" FontSize="15" Foreground="LightGray"/>
             <Button x:Name="btnEdit" Content="Edit" HorizontalAlignment="Right" Height="30" Width="130" Margin="5"
                     Command="{Binding EditCommand}" />
             <Button Content="Cancel" HorizontalAlignment="Right" Height="30" Width="130" Margin="5"
